# ax-content-hub

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.beads/: beads.jsonl
.claude/: settings.json
.claude/commands/: run-quality-checks.md  speckit-workflow.md
.claude/skills/review-coderabbit/: SKILL.md
.claude/skills/review-coderabbit/scripts/: coderabbit-fetch.sh  coderabbit-reply.sh  coderabbit-resolve.sh  coderabbit-threads.sh
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: architecture.excalidraw  ax-content-hub-plan.md  phase-2-plan.md
docs/research/: faster-whisper-youtube-transcription.md
specs/001-phase0-project-setup/: plan.md  spec.md  tasks.md
specs/002-phase1-mvp-pipeline/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-phase1-mvp-pipeline/checklists/: requirements.md
specs/002-phase1-mvp-pipeline/contracts/: openapi.yaml
specs/003-phase2-collection-expansion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-phase2-collection-expansion/checklists/: requirements.md
specs/003-phase2-collection-expansion/contracts/: tool-interfaces.md
src/adapters/: __init__.py  firestore_client.py  gemini_client.py  slack_client.py  tasks_client.py
src/agent/: __init__.py
src/agent/core/: __init__.py  cognee_tools.py
src/agent/domains/: __init__.py
src/agent/domains/collector/: __init__.py
src/agent/domains/collector/tools/: __init__.py  rss_tool.py  web_scraper_tool.py  youtube_stt.py  youtube_tool.py
src/agent/domains/distributor/: __init__.py
src/agent/domains/distributor/tools/: __init__.py  slack_sender_tool.py
src/agent/domains/processor/: __init__.py
src/agent/domains/processor/tools/: __init__.py  scorer_tool.py  summarizer_tool.py  translator_tool.py
src/api/: __init__.py  internal_tasks.py  main.py  scheduler.py  sources.py  subscriptions.py
src/config/: __init__.py  logging.py  settings.py
src/models/: __init__.py  content.py  digest.py  source.py  subscription.py
src/repositories/: __init__.py  base.py  content_repo.py  digest_repo.py  source_repo.py  subscription_repo.py
src/services/: __init__.py  content_pipeline.py  digest_service.py  quality_filter.py
tests/: conftest.py  utils.py
tests/integration/: test_collection_flow.py  test_processing_flow.py  test_web_scraping_flow.py  test_youtube_stt_flow.py
tests/unit/adapters/: test_firestore_client.py  test_gemini_client.py  test_slack_client.py  test_tasks_client.py
tests/unit/agent/: test_cognee_tools.py
tests/unit/agent/domains/: __init__.py
tests/unit/agent/domains/collector/: __init__.py  test_rss_tool.py  test_web_scraper_tool.py  test_youtube_stt.py  test_youtube_tool.py
tests/unit/agent/domains/distributor/: __init__.py  test_slack_sender_tool.py
tests/unit/agent/domains/processor/: __init__.py  test_scorer_tool.py  test_summarizer_tool.py  test_translator_tool.py
tests/unit/api/: test_internal_tasks.py  test_main.py  test_scheduler.py  test_sources.py  test_subscriptions.py
tests/unit/config/: test_logging.py  test_settings.py
tests/unit/models/: test_content.py  test_digest.py  test_source.py  test_subscription.py
tests/unit/repositories/: test_base.py  test_content_repo.py  test_digest_repo.py  test_source_repo.py  test_subscription_repo.py
tests/unit/services/: test_content_pipeline.py  test_digest_service.py  test_quality_filter.py
